--- a/config.json
+++ b/config.json
@@ -26,5 +26,6 @@
     "leds6": {"red": 0, "green": 0, "blue": 0},
     "leds7": {"red": 0, "green": 0, "blue": 0},
     "leds8": {"red": 0, "green": 0, "blue": 0}
-  }
+  },
+  "defaultUpdateInterval": 2000
 }
