Added final touches

--- a/config.json
+++ b/config.json
@@ -4,19 +4,22 @@
   "defaultMDNSname": "localhost:3001",
   "defaultPostRoute": "/postvalue", 
   "defaultGetRoute": "/sensval",
-  "pressure": "355",
+  "LED1": true,
+  "LED2": false,
+  "LED3": true,
+  "pressure": 355,
   "temperature": [2, 45, 56, 66, 12, 30, 23, 25, 22, 15],
-  "button1State": "True",
-  "button2State": "False",
-  "button3State": "True",
-  "ambient_light": "1",
-  "red_light": "1",
-  "green_light":"1",
-  "blue_light":"0",
-  "lightness": "0",
-  "acceleration_x": "12",
-  "acceleration_y": "23",
-  "acceleration_z": "11",
+  "button1State": true,
+  "button2State": false,
+  "button3State": true,
+  "ambient_light": 1,
+  "red_light": 1,
+  "green_light": 1,
+  "blue_light": 0,
+  "lightness": 0,
+  "acceleration_x": 12,
+  "acceleration_y": 23,
+  "acceleration_z": 11,
   "defaultRGBLeds": {
     "leds1": {"red": 0, "green": 0, "blue": 0},
     "leds2": {"red": 0, "green": 0, "blue": 0},
@@ -27,5 +30,6 @@
     "leds7": {"red": 0, "green": 0, "blue": 0},
     "leds8": {"red": 0, "green": 0, "blue": 0}
   },
-  "defaultUpdateInterval": 5000
+  "defaultUpdateInterval": 5000,
+  "startWithAutoupdate": false
 }
